fix contrast to pass AA

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     font-weight: 500;
     font-style: normal;
 
-    background: #FBE6EC;
+    background: #FCF4F6;
 }
 
 body.dark {
@@ -91,14 +91,14 @@ h3.written-in-ink {
 
 p {
     font-size: 13pt;
-    color: #777;
+    color: #6E6E6E;
     line-height: 1.7em;
     font-weight: lighter;
 }
 
 a {
     font-weight: 700;
-    color: #63927B;
+    color: #3D7C56;
     transition: color 0.6s;
     text-decoration: none;
 }
